fix social icons not aligned correctly, fixed grid in individualPages, fixed link in about page

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -485,11 +485,10 @@ hr{
     padding: 100px;
     gap: 20px;
     display: grid;
-    grid-template-rows: repeat(2,1fr);
     grid-template-columns: repeat(2,1fr);
 }
 #moviePoster{
-    grid-row: 1/2 ;
+    grid-column: 1/2 ;
     margin: 0 auto;
 }
 /* #moviePoster img{
@@ -497,7 +496,7 @@ hr{
     height: 600px;
 } */
 #shortInfo{
-    grid-row: 2/3;
+    grid-column: 2/3;
 }
 #shortInfo h1{
     font-size: 3rem;
@@ -510,6 +509,7 @@ hr{
 #searchAgain{
     justify-self: center;
     grid-column: 1/3;
+    grid-row: 3/3;
 }
 #searchAgain button{
     color: #ffff;
@@ -843,7 +843,7 @@ hr{
         grid-column: 1/3;
     }
     #searchAgain{
-        grid-column: 1/3;
+        grid-row: 4/4;
     }
     #searchAgain button{
         width: 300px;
@@ -1050,5 +1050,8 @@ hr{
     #aboutContent img{
         width: 50%;
         height: 50%;
+    }
+    #socialList li{
+        padding: 0 10px;
     }
 }
